Fixed formatting isue

--- a/Books/DannyTheStreet/index.html
+++ b/Books/DannyTheStreet/index.html
@@ -20,13 +20,70 @@
       </section>
     </nav>
   </aside>
+
   <div class="main-content">
     <main class="books-section">
       <h1 class="books-title">Danny the Street</h1>
-      <div class="book-card" style="max-width:600px;margin:0 auto;">
-        <h2 class="book-title">Danny the Street</h2>
-        <p class="book-desc">An original story inspired by the whimsical and mysterious character Danny the Street, blending surrealism and heart.</p>
-        <p style="color:#c0c4cb;">[Book content or chapters can go here.]</p>
+
+      <div class="book-card" style="max-width:720px;margin:0 auto;">
+        
+        <h2 class="book-title">Project Overview</h2>
+        <p class="book-desc">
+          <em>Danny the Street</em> is a surreal murder mystery narrated by Danny — a kid who died under 
+          suspicious circumstances and came back as a street. Literally. Asphalt, curb, crosswalks, the whole thing.
+        </p>
+        <p class="book-desc">
+          The town paved over him and moved on. Danny didn’t. He’s still here, still watching, still trying to 
+          figure out who killed him and why the town seems determined to pretend nothing happened.
+        </p>
+
+        <h2 class="book-title" style="margin-top:22px;">What the Story Actually Is</h2>
+        <p class="book-desc">
+          Danny can’t move like a ghost or talk like a person. He can only do what a street can do:
+        </p>
+        <ul class="book-desc" style="margin-left:1.2rem;">
+          <li style="margin-bottom:0.35rem;">shift his layout by a few feet, just enough to make someone uneasy,</li>
+          <li style="margin-bottom:0.35rem;">bend the route of a parade or delivery truck,</li>
+          <li style="margin-bottom:0.35rem;">flicker streetlights, stall crosswalk signals,</li>
+          <li style="margin-bottom:0.35rem;">force people to walk past things they’d rather avoid.</li>
+        </ul>
+        <p class="book-desc">
+          Most people chalk it up to bad municipal planning. But one person — your narrator — notices every detail 
+          Danny tries to communicate, because they were the last person to see Danny alive.
+        </p>
+
+        <h2 class="book-title" style="margin-top:22px;">Tone & Structure</h2>
+        <p class="book-desc">
+          The tone blends quiet humor with creeping dread. The town itself feels polite but wrong, like a place 
+          where everyone remembers something they refuse to say out loud. As the narrator follows the clues Danny 
+          leaves, the story shifts from quirky small-town oddities to a layered investigation:
+        </p>
+        <ul class="book-desc" style="margin-left:1.2rem;">
+          <li style="margin-bottom:0.4rem;">On the surface: funny, surreal episodes of a town adapting to a sentient street.</li>
+          <li style="margin-bottom:0.4rem;">Underneath: patterns Danny is trying to reveal — people he herds together, places he avoids, places he insists the narrator visits.</li>
+          <li style="margin-bottom:0.4rem;">At the core: the truth about Danny’s death and why the town needed him gone.</li>
+        </ul>
+
+        <h2 class="book-title" style="margin-top:22px;">Danny’s Abilities</h2>
+        <p class="book-desc">
+          Danny isn’t omnipotent — he’s asphalt. His power is subtle and maddening:
+        </p>
+        <ul class="book-desc" style="margin-left:1.2rem;">
+          <li style="margin-bottom:0.35rem;">He can reroute joggers by changing the slope of the sidewalk.</li>
+          <li style="margin-bottom:0.35rem;">He can “forget” to let a car turn until the driver gives up.</li>
+          <li style="margin-bottom:0.35rem;">He can draw attention to ignored corners via signage that shouldn’t exist.</li>
+        </ul>
+        <p class="book-desc">
+          It’s not magic. It’s persistence. It’s the stubborn will of someone who refuses to stay buried under concrete.
+        </p>
+
+        <h2 class="book-title" style="margin-top:28px;">Table of Contents</h2>
+        <p class="book-desc">
+          A chapter-by-chapter index will go here later. Each chapter will focus on a specific location Danny 
+          manipulates — the pet shop, the festival route, the street that shortens at night — and how each 
+          one uncovers a piece of his death.
+        </p>
+
       </div>
     </main>
   </div>
