--- a/Books/HarryPotterRewrite/index.html
+++ b/Books/HarryPotterRewrite/index.html
@@ -20,13 +20,91 @@
       </section>
     </nav>
   </aside>
+
   <div class="main-content">
     <main class="books-section">
       <h1 class="books-title">The Harry Potter Rewrite</h1>
-      <div class="book-card" style="max-width:600px;margin:0 auto;">
-        <h2 class="book-title">The Harry Potter Rewrite</h2>
-        <p class="book-desc">A creative rewrite of the Harry Potter universe, offering fresh perspectives and twists on the beloved magical saga.</p>
-        <p style="color:#c0c4cb;">[Book content or chapters can go here.]</p>
+
+      <div class="book-card" style="max-width: 720px; margin: 0 auto;">
+        <h2 class="book-title">Project Overview</h2>
+        <p class="book-desc">
+          This project isn’t a retelling of Harry’s story so much as a deep prequel that lives in the same
+          universe. It’s set centuries before the main series and focuses on the origins of the Deathly
+          Hallows, the idea of “Master of Death,” and what it would actually mean for someone to carry that
+          title over a long stretch of history. Instead of school-years hijinks, the story follows adults
+          dealing with plague, war, and the slow, messy consequences of magic.
+        </p>
+        <p class="book-desc">
+          At the center of it is a wandering healer who stumbles into time magic and wandlore he doesn’t
+          fully understand. He’s not a Chosen One; he’s stubborn, tired, and trying to keep people alive in
+          a world where both disease and wizards can kill you. His path crosses with early wandmakers,
+          obscure magical families, and the first whispers of the Hallows, pulling him into a long chain of
+          bargains and mistakes that echo forward into the canon era.
+        </p>
+        <p class="book-desc">
+          The point of the rewrite is to:
+        </p>
+        <ul class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
+          <li style="margin-bottom: 0.4rem;">
+            Treat magic as a system with limits, costs, and history—not just a set of convenient spells.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Ground the Hallows and “Master of Death” in something that feels psychologically and morally
+            heavy, rather than a simple power-up.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Explore how wizarding culture evolved before Hogwarts-as-we-know-it, especially during
+            plague-era Europe.
+          </li>
+        </ul>
+
+        <h2 class="book-title" style="margin-top: 22px;">Book 1 – <em>Gregor of the Wands</em></h2>
+        <p class="book-desc">
+          The first arc, tentatively titled <em>Gregor of the Wands</em>, is set in a small town during a
+          devastating plague. The healer arrives hoping to help, but quickly realizes that what’s killing
+          people isn’t only disease—there are rumors of a wand that “chooses” its master a little too
+          aggressively, and a local wandmaker whose work may be tied to something older and more dangerous.
+        </p>
+        <p class="book-desc">
+          This section of the story:
+        </p>
+        <ul class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
+          <li style="margin-bottom: 0.4rem;">
+            Introduces the healer, his relationship to time magic, and why he’s already wary of anything
+            that promises power without cost.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Follows a wandmaker whose craft edges up against the kind of legend that eventually becomes the
+            Elder Wand myth.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Uses the plague as a pressure cooker for moral choices: who gets healed, what line you cross to
+            save someone, and what it does to you when you can’t.
+          </li>
+        </ul>
+
+        <h2 class="book-title" style="margin-top: 22px;">Future Directions</h2>
+        <p class="book-desc">
+          Later arcs will push the healer further through time and deeper into the Hallows’ orbit: watching
+          how stories mutate into legend, how different owners interpret the idea of “Master of Death,” and
+          how someone who has seen too many lifetimes decides what kind of ending they’re willing to accept.
+          The goal is to weave through familiar canon touchpoints without being trapped by them—more
+          “shadow history” than direct retcon.
+        </p>
+
+        <h2 class="book-title" style="margin-top: 28px;">Table of Contents</h2>
+        <p class="book-desc">
+          I’ll eventually add a chapter-by-chapter table of contents here for <em>Gregor of the Wands</em>,
+          with short notes on each chapter and how it fits into the larger Hallows storyline.
+        </p>
+        <!-- Example future structure:
+        <ol class="book-desc">
+          <li>Chapter 1 – The Forest Road</li>
+          <li>Chapter 2 – Stowmarket</li>
+          <li>Chapter 3 – The Wandmaker’s Shop</li>
+          ...
+        </ol>
+        -->
       </div>
     </main>
   </div>
