--- a/Books/The100Rewrite/index.html
+++ b/Books/The100Rewrite/index.html
@@ -20,13 +20,86 @@
       </section>
     </nav>
   </aside>
+
   <div class="main-content">
     <main class="books-section">
       <h1 class="books-title">The 100 Rewrite</h1>
-      <div class="book-card" style="max-width:600px;margin:0 auto;">
-        <h2 class="book-title">The 100 Rewrite</h2>
-        <p class="book-desc">A reimagined take on the post-apocalyptic world of The 100, exploring new character arcs and alternate outcomes.</p>
-        <p style="color:#c0c4cb;">[Book content or chapters can go here.]</p>
+
+      <div class="book-card" style="max-width: 720px; margin: 0 auto;">
+        <h2 class="book-title">Project Overview</h2>
+        <p class="book-desc">
+          This is a long-form rewrite of <em>The 100</em> that keeps the emotional core of the show but rebuilds
+          the scaffolding underneath it. I’m keeping the broad premise—humanity surviving in orbit after a
+          nuclear apocalypse—but tightening the science, clarifying the politics, and giving character choices
+          cleaner cause-and-effect. Instead of jumping straight into the dropship, the story starts years earlier
+          and follows the people who actually built the world that Clarke and the others inherit.
+        </p>
+        <p class="book-desc">
+          The goal isn’t to “fix” everything or write a perfect version; it’s to create a version that feels
+          internally consistent to me. That means:
+        </p>
+        <ul class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
+          <li style="margin-bottom: 0.4rem;">
+            Making the space program, stations, and political alliances feel like real long-term projects,
+            not just set dressing.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Letting technology like A.L.I.E. and the Nightblood serum grow out of believable research,
+            trade-offs, and failures.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            Giving key characters clear strengths, flaws, and through-lines so their big decisions feel earned
+            instead of convenient.
+          </li>
+        </ul>
+
+        <h2 class="book-title" style="margin-top: 22px;">Book 1 – <em>The 5</em></h2>
+        <p class="book-desc">
+          The first book, <em>The 5</em>, is a prequel set in the years leading up to the apocalypse. It follows
+          multiple points of view whose choices quietly set up the world of the main series:
+        </p>
+        <ul class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
+          <li style="margin-bottom: 0.4rem;">
+            <strong>Becca Franko</strong> aboard Polaris Station, refining A.L.I.E. and getting drawn into the
+            early radiation-resistance research that will eventually become Nightblood.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            <strong>Callie Cadogan</strong> on Earth, growing up inside her father’s doomsday cult and slowly
+            realizing that his “salvation” plan has a cost.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            <strong>Peri</strong>, a medic on Polaris and Becca’s closest friend, who becomes the emotional
+            anchor of the station storyline.
+          </li>
+          <li style="margin-bottom: 0.4rem;">
+            <strong>Jonah and Mara</strong>, a quiet newlywed couple stationed on Europa, whose seemingly
+            small personal story intersects with decisions being made far above their pay grade.
+          </li>
+        </ul>
+        <p class="book-desc">
+          Instead of treating the apocalypse as a sudden backdrop event, this book treats it as the end of a
+          long chain of understandable choices—scientific, political, and personal. By the time the bombs fall,
+          the goal is for it to feel tragic but inevitable, not random.
+        </p>
+
+        <h2 class="book-title" style="margin-top: 22px;">Future Books</h2>
+        <p class="book-desc">
+          Later books will move into reimagined versions of the main <em>The 100</em> storyline: the dropship
+          landing, Mount Weather, A.L.I.E., Praimfaya, and beyond. Each arc keeps the big questions of the
+          original—what we’re willing to do to survive, what we owe each other, and what “doing better”
+          actually looks like—while giving the world and its timelines a sharper, more grounded spine.
+        </p>
+
+        <h2 class="book-title" style="margin-top: 28px;">Table of Contents – <em>The 5</em></h2>
+        <ol class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
+          <li style="margin-bottom: 0.4rem;">
+            <a href="/Books/The100Rewrite/chapter1-orbit.html" class="book-link">
+              Chapter One – Orbit <span style="color:#9ca0aa;">(Becca, Polaris Station)</span>
+            </a>
+          </li>
+          <!-- Future chapters can be added here -->
+        </ol>
+
       </div>
     </main>
   </div>
