--- a/books.html
+++ b/books.html
@@ -20,21 +20,64 @@
       </section>
     </nav>
   </aside>
+
   <div class="main-content">
     <main class="books-section">
       <h1 class="books-title">Books</h1>
+
+      <section class="books-intro">
+        <p>
+          I write these stories for myself—out of the simple impulse to take worlds I enjoy and explore
+          the versions that make the most sense to me. When I connect with a piece of media, I almost
+          always end up imagining different angles: threads that could have gone deeper, character choices
+          that deserved more weight, or worldbuilding that feels richer with a bit more structure.
+        </p>
+
+        <p>
+          These projects aren’t meant for publication. They’re personal rewrites and narrative
+          experiments—places where I can pull apart a story, rebuild it, and see how it changes when the
+          logic is strengthened or the characters are given room to grow. Some ideas stay close to the
+          source; others drift into something new. What connects them all is the freedom to write without
+          deadlines, expectations, or the constraints of canon.
+        </p>
+
+        <p>
+          This section collects the worlds I’m currently exploring: reimagined versions of familiar
+          stories, and a few original ones shaped by the same curiosity. They’re not final products—they’re
+          long-form creative spaces where I learn, experiment, and build the stories I want to read.
+        </p>
+      </section>
+
       <div class="books-grid">
         <a class="book-card book-link" href="Books/The100Rewrite/index.html">
           <h2 class="book-title">The 100 Rewrite</h2>
-          <p class="book-desc">A reimagined take on the post-apocalyptic world of The 100, exploring new character arcs and alternate outcomes.</p>
+          <p class="book-desc">
+            A reimagining of The 100 that rebuilds its world from the ground up—focusing on coherent
+            science, stronger character motivations, and a clearer chain of events leading into the
+            original story. This version expands on the political tensions, technological decisions,
+            and personal flaws that shape the apocalypse, exploring how small choices accumulate into
+            the world we eventually see.
+          </p>
         </a>
+
         <a class="book-card book-link" href="Books/HarryPotterRewrite/index.html">
           <h2 class="book-title">The Harry Potter Rewrite</h2>
-          <p class="book-desc">A creative rewrite of the Harry Potter universe, offering fresh perspectives and twists on the beloved magical saga.</p>
+          <p class="book-desc">
+            A dark, grounded story set centuries before the Harry Potter era, following a wandering healer
+            whose search for a cure to the plague leads him into the origins of the Deathly Hallows.
+            Blending medieval history, time travel, wandlore, and the cost of magic, the story explores
+            how one man’s grief shapes the future of wizardkind.
+          </p>
         </a>
+
         <a class="book-card book-link" href="Books/DannyTheStreet/index.html">
           <h2 class="book-title">Danny the Street</h2>
-          <p class="book-desc">An original story inspired by the whimsical and mysterious character Danny the Street, blending surrealism and heart.</p>
+          <p class="book-desc">
+            An original mystery narrated by someone who is not entirely alive, set in a town whose streets
+            behave like sentient beings. Blending subtle surrealism with quiet humor, the story follows
+            a narrator trying to make sense of a place that rearranges itself, hides secrets, and reacts
+            to the people living in it.
+          </p>
         </a>
       </div>
     </main>
