--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <!-- NEW: full-width skills block spanning both columns -->
                     <div class="skills-blade skills-wide" aria-label="Key skills">
-                            <h3 class="eyebrow" style="text-align:center;">Technical Expertise &amp; Tools</h3>
+                            <h3 class="eyebrow" style="text-align:center;">Technical Expertise &amp; Tools | प्राविधिक दक्षता र उपकरणहरू</h3>
                             <div class="skills-grid">
                                     <div class="skill-group">
                                             <h4>Control Systems Development</h4>
