Update chapter link to relative path

--- a/Books/The100Rewrite/index.html
+++ b/Books/The100Rewrite/index.html
@@ -93,7 +93,7 @@
         <h2 class="book-title" style="margin-top: 28px;">Table of Contents – <em>The 5</em></h2>
         <ol class="book-desc" style="margin-left: 1.2rem; padding-left: 0;">
           <li style="margin-bottom: 0.4rem;">
-            <a href="/Books/The100Rewrite/chapter1-orbit.html" class="book-link">
+            <a href="chapter1-orbit.html" class="book-link">
               Chapter One – Orbit <span style="color:#9ca0aa;">(Becca, Polaris Station)</span>
             </a>
           </li>
